--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,8 @@
 @import "footer/_footer"; 
 @import "body/_bodysingle";
 @import "body/_bodyportfolio";
-@import "body/_bodycontact"
+@import "body/_bodycontact";
+@import "body/_blog"; 
 
 
 
