--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h4, h6 {
 
 * {
 	color: $muted;
-	font-family: 'Open-Sans-Condensed';
+	font-family: 'Open-Sans-Condensed', sans-serif;
 }
 
 
@@ -49,7 +49,11 @@ h1, h2, h3, h4, h4, h6 {
 		width: 40%;
 		font-family: fantasy !important;
 		font-weight: lighter !important; 
+	/*Revisar por qué no aparecen el color y fuente*/
+	p {
+		color: $ngro !important;
 	}
+}
 }
 }
 
