--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,10 @@ h2 span {
     font-weight: lighter !important;
     text-transform: uppercase; }
 
+/* SLIDER */
+.item {
+  height: 500px; }
+
 footer {
   background-color: #FFCCBC;
   color: #FFFFFF !important; }
