--- a/css/body/_bodyhome.scss
+++ b/css/body/_bodyhome.scss
@@ -1,5 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display:400italic);
 
+/*Revisar los iconos del carrusel!!*/
 
 .ei-slider-large {
 	img {
@@ -77,3 +78,12 @@ h2 {
 	height: 500px;
 }
 
+.itemblog {
+	height: 350px !important;
+}
+
+@media (min-width: 300px) and (max-width: 650px) {
+	.item {
+	height: 200px !important;
+}
+}
